if(USE_FSAL_NULL)
  add_subdirectory(FSAL_NULL)
endif(USE_FSAL_NULL)
if(USE_FSAL_NULLCACHE)
  add_subdirectory(FSAL_NULLCACHE)
endif(USE_FSAL_NULLCACHE)
if(USE_FSAL_DISKCACHE)
  add_subdirectory(FSAL_DISKCACHE)
endif(USE_FSAL_DISKCACHE)
if(USE_FSAL_MEMCACHE)
  add_subdirectory(FSAL_MEMCACHE)
endif(USE_FSAL_MEMCACHE)
add_subdirectory(FSAL_MDCACHE)
